syntax = "proto3";

package crossplane;

import "crossplane/types.proto";
import "crossplane/yandex.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/stroppy-io/hatchet-workflow/internal/proto/crossplane";

message ResourceDef {
    message Spec {
        Ref write_connection_secret_to_ref = 1 [(validate.rules).message.required = true];
        string deletion_policy = 2 [(validate.rules).string.min_len = 1];
        map<string, string> provider_config_ref = 3;
        oneof for_provider {
            YandexCloud.Vm yandex_cloud_vm = 100 [(validate.rules).message.required = true];
            YandexCloud.Network yandex_cloud_network = 101 [(validate.rules).message.required = true];
            YandexCloud.Subnet yandex_cloud_subnet = 102 [(validate.rules).message.required = true];
        }
    }
    string api_version = 2 [(validate.rules).message.required = true];
    string kind = 1 [(validate.rules).message.required = true];
    Metadata metadata = 3;
    Spec spec = 4 [(validate.rules).message.required = true];
}

message Resource {
    enum Status {
        STATUS_UNSPECIFIED = 0;
        STATUS_CREATING = 1;
        STATUS_READY = 2;
        STATUS_DESTROYING = 3;
        STATUS_DESTROYED = 4;
        STATUS_DEGRADED = 5;
    }
    ExtRef ref = 1;
    google.protobuf.Timestamp created_at = 2 [(validate.rules).message.required = true];
    google.protobuf.Timestamp updated_at = 3 [(validate.rules).message.required = true];
    optional google.protobuf.Timestamp deleted_at = 4;
    string resource_yaml = 5 [(validate.rules).string.min_len = 1];
    Status status = 6 [(validate.rules).enum.defined_only = true];
    bool synced = 7; // crossplane default statuses
    bool ready = 8; // crossplane default statuses
    string external_id = 9; // crossplane default statuses
    ResourceDef resource_def = 10 [(validate.rules).message.required = true];
}